# kokkos-GPU-Benchmarking-tool

./: CMakeLists.txt  README.md  matrix_add_kokkos.cpp  matrix_multip_kokkos.cpp
